style(header): fix responsive action icons overlap

--- a/src/app/app-header/app-header.component.scss
+++ b/src/app/app-header/app-header.component.scss
@@ -7,4 +7,12 @@ nav#main-navbar {
     a {
         color: #fff;
     }
+
+    .container {
+        @media screen and(max-width: $screen-sm) {
+            margin: 0 !important;
+            max-width: 100%;
+            width: 100%;
+        }
+    }
 }
