--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,17 +6,9 @@
 }
 
 input#main-search-input {
-    // background-color: transparent;
     border: none;
-    // border-bottom: 1px solid #fff;
-    // color: #fff;
     padding: 4px 20px;
+    padding-right: 70px;
     border-radius: 6px;
-    // max-width: 450px;
     font-size: 2rem;
-    // margin-left: 5px;
-
-    @media screen and(max-width: $screen-xs) {
-        margin-left: 0;
-    }
 }
